--- a/voron/tensioncalc.html
+++ b/voron/tensioncalc.html
@@ -124,7 +124,7 @@
         <h3>Parameters</h3>
         <table>
             <tr>
-                <td>Design torque:</td>
+                <td>Per motor max torque:</td>
                 <td><input type='text' id='t_hold' value='0.5'> Nm</td>
             </tr><tr>
                 <td>Belt speed:</td>
