add 750 rpm moons and move list closer to input

--- a/voron/tensioncalc.html
+++ b/voron/tensioncalc.html
@@ -41,12 +41,6 @@
         The result will be too big and you will likely be able to get away with somewhat less tension.
         However, as long as you don't overtension the belt, that doesn't matter.
         </p>
-
-        <p>
-        Here is a list of motors with some torque ratings from their docs (linked):
-        <ul id='motors'>
-        </ul>
-        </p>
        
         <p>
         <b>On overtensioning:</b>
@@ -121,6 +115,16 @@
         </p>
 
         <div hidden id='hide'>
+
+        <p>
+        Here is a list of motors with some torque ratings from their docs (linked):
+        <ul id='motors'>
+        </ul>
+        <br>
+        The Moons are great for playing with realistic values, since they have nice torque/speed curves on their website.<br>
+        E.g. select the 750 rpm and see how limiting your speed can increase accels.<br>
+        That should give you an idea how other motors behave.
+        </p>
         <h3>Parameters</h3>
         <table>
             <tr>
