fix diagonal travel speed computation

--- a/voron/tensioncalc.html
+++ b/voron/tensioncalc.html
@@ -230,6 +230,10 @@
         </p>
         <hr>
         <h3>Force to Hz</h3>
+        <p>
+        <b>Mind that any value beyond about 4 lbs requires double shear!</b>
+        The exact value depends on your motor and might be even lower - so if you use this tool, always use double shear.
+        </p>
         <table>
             <tr>
                 <td>Tension force</td>
